# src/main/java/ru/net/relay/blacklist/dto/VPNDomainDto.java
@@ -1,0 +1,13 @@
+package ru.net.relay.blacklist.dto;
+
+import lombok.Value;
+
+/**
+ * DTO for {@link ru.net.relay.blacklist.entity.VPNDomain}
+ */
+@Value
+public class VPNDomainDto {
+    String domain;
+    String comment;
+    Long id;
+}
